Make sure there's a subject, otherwise i18n() goes mental

BUG: 391189