libdiscover/backends/KNSBackend/KNSReviews.cpp
@@ -90,10 +90,12 @@ void KNSReviews::commentsReceived(Attica::BaseJob* j)
     Attica::Comment::List comments = job->itemList();
 
     QVector<ReviewPtr> reviews;
+    reviews.reserve(comments.count());
     AbstractResource* app = job->property("app").value<AbstractResource*>();
     foreach(const Attica::Comment& comment, comments) {
         //TODO: language lookup?
-        ReviewPtr r(new Review(app->name(), app->packageName(), QStringLiteral("en"), comment.subject(), comment.text(), comment.user(),
+        const QString subject = comment.subject().isEmpty() ? QStringLiteral(".") : comment.subject();
+        ReviewPtr r(new Review(app->name(), app->packageName(), QStringLiteral("en"), subject, comment.text(), comment.user(),
             comment.date(), true, comment.id().toInt(), comment.score()/10, 0, 0, QString()
         ));
         reviews += r;
